# TruHacks26

./: .gitignore  BACKEND_WIDGET_API.md  DESIGN.md  FRONTEND_PLAN.md  README.md  WIDGET_SPEC.md  courses.json  jobs.json  package-lock.json  professors.json  results.json
backend/: .env.example  availablecourses.db  availablecourses.json  course_embeddings.npy  course_metadata.pkl  cs_degree_roadmap.json  main.py  pipeline.py  pyproject.toml  student_gpa.json
backend/tests/: test_course_search.py  test_course_tool_calling.py  test_widget_selection.py
backend/tools/: .env  build_embeddings.py  canvas_scraper.py  course_scraper.py  courses.json  gemini_tools.py  rmp_scraper.py  theirstack_scraper.py
front-end/: WIDGETS.md  index.html  package-lock.json  package.json  vite.config.ts
front-end/src/: App.css  App.tsx  audioPlayer.ts  exampleData.ts  index.css  types.ts
front-end/src/components/: LoginScreen.tsx  TranscriptPanel.tsx  VoiceOrb.tsx  Widget.tsx  WidgetDock.tsx
front-end/src/components/chat/: ChatInput.tsx  ChatPanel.tsx  MessageBubble.css  MessageBubble.tsx
front-end/src/context/: AuthContext.tsx
front-end/src/hooks/: useWidgetManager.ts
front-end/src/pages/: ChatPage.css  ChatPage.tsx  LandingPage.css  LandingPage.tsx
front-end/src/services/: mockWsService.ts  realWsService.ts  ttsService.ts  wsService.ts
front-end/src/stores/: chatStore.ts  widgetWindowStore.ts
front-end/src/styles/: tokens.css
front-end/src/types/: index.ts
tools/: canvas_scraper.py  courses.json  rmp_scraper.py  theirstack_scraper.py
(+40 files in other folders)
