[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "websockets>=15",
    "google-genai>=1",
    "elevenlabs>=1.50",
    "python-dotenv>=1",
    "requests>=2.32",
    "sentence-transformers>=3.0",
    "numpy>=1.26",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
]
